Fixed linking of libmauth.
Targets linked to libmauth got all libraries linked, that libmauth has linked.
To remove unnecessary links in all targets, libmauth's linked libraries are
linked private.

--- a/src/libmauth/CMakeLists.txt
+++ b/src/libmauth/CMakeLists.txt
@@ -55,7 +55,7 @@ add_library(mauth SHARED
 add_coverage(mauth)
 add_sanitizers(mauth)
 
-target_link_libraries(mauth
+target_link_libraries(mauth PRIVATE
 	${CURL_LIBRARIES}
 	${JSON-C_LIBRARY}
 	${LIBCONFIG_LIBRARY}
