Added PAM packages.

--- a/debian/rules
+++ b/debian/rules
@@ -5,9 +5,12 @@
 
 
 override_dh_auto_configure:
-	dh_auto_configure -- -DCMAKE_INSTALL_SYSCONFDIR=/etc
+	dh_auto_configure --                \
+		-DCMAKE_INSTALL_SYSCONFDIR=/etc \
+		-DCMAKE_INSTALL_PREFIX_PAM=/
 
 .PHONY: override_dh_strip
 override_dh_strip:
 	dh_strip -plibmauth1 --dbg-package=libmauth1-dbg
+	dh_strip -plibpam-mauth --dbg-package=libpam-mauth-dbg
 	dh_strip -pmauth-openssh --dbg-package=mauth-openssh-dbg
