Fixed installation path of PAM module.

--- a/src/pam/CMakeLists.txt
+++ b/src/pam/CMakeLists.txt
@@ -46,5 +46,6 @@ set_target_properties(mauth-pam PROPERTIES OUTPUT_NAME "mauth" PREFIX "pam_")
 if (NOT CMAKE_INSTALL_PREFIX_PAM)
 	set(CMAKE_INSTALL_PREFIX_PAM "")
 endif ()
-install(TARGETS mauth-pam
-	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX_PAM}${CMAKE_INSTALL_LIBDIR}")
+install(TARGETS mauth-pam LIBRARY DESTINATION
+	"${CMAKE_INSTALL_PREFIX_PAM}${CMAKE_INSTALL_LIBDIR}/security"
+)
