--- a/debian/control
+++ b/debian/control
@@ -46,8 +46,7 @@ Architecture: any
 Multi-Arch: same
 Section: libdevel
 Priority: optional
-Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmauth1 (= ${binary:Version})
+Depends: libmauth1 (= ${binary:Version}), ${misc:Depends}
 Description: Mauth API framework - API communication library.
  mauth is an authentication API for authenticating external employees at
  customer services and machines for maintenance. Employees will be authenticated
@@ -64,7 +63,7 @@ Multi-Arch: same
 Section: admin
 Priority: optional
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, libpam-runtime
 Description: Mauth API framework - PAM module.
  mauth is an authentication API for authenticating external employees at
  customer services and machines for maintenance. Employees will be authenticated
